# qupath-extension-dl-pixel-classifier

./: .gitignore  QUICKSTART.md  README.md  build.gradle.kts
.github/workflows/: ci.yml
docs/: APPOSE_DEV_GUIDE.md  BEST_PRACTICES.md  CONTEXT_AND_DOWNSAMPLE_DESIGN.md  DOMAIN_ADAPTATION_GUIDE.md  FAST_PRETRAINED.md  INFERENCE_GUIDE.md  NORMALIZATION_ROUNDTRIP.md  PARAMETERS.md  PREFERENCES.md  SCRIPTING.md  TINY_MODEL.md  TIPS_AND_TRICKS.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md
docs/images/: IMAGE_ACKS.tsv  IMAGE_REGISTRY.md
python_server/: README.md  pyproject.toml
python_server/dlclassifier_server/: __init__.py  inference_preprocess.py
python_server/dlclassifier_server/models/: __init__.py  tiny_unet.py
python_server/dlclassifier_server/services/: gpu_manager.py  inference_service.py  mae_pretraining.py  muvit_model.py  ssl_pretraining.py  training_diagnostics.py  training_service.py
python_server/dlclassifier_server/utils/: spatial.py
python_server/tests/: test_static_onnx_hw.py  test_training_service.py
scripts/examples/: 01_basic_classification.groovy  02_batch_classification.groovy  05_utility_methods.groovy
src/main/java/qupath/ext/dlclassifier/: SetupDLClassifier.java
src/main/java/qupath/ext/dlclassifier/classifier/: ClassifierHandler.java  ClassifierRegistry.java
src/main/java/qupath/ext/dlclassifier/classifier/handlers/: CustomONNXHandler.java  FastPretrainedHandler.java  MuViTHandler.java  TinyUNetHandler.java  UNetHandler.java
src/main/java/qupath/ext/dlclassifier/controller/: InferenceWorkflow.java  ModelManagementWorkflow.java  TrainingWorkflow.java
src/main/java/qupath/ext/dlclassifier/model/: ChannelConfiguration.java  ClassifierMetadata.java  InferenceConfig.java  TrainingConfig.java
src/main/java/qupath/ext/dlclassifier/preferences/: DLClassifierPreferences.java
src/main/java/qupath/ext/dlclassifier/scripting/: DLClassifierScripts.java  ScriptGenerator.java
src/main/java/qupath/ext/dlclassifier/service/: AnnotationAdjuster.java  ApposeClassifierBackend.java  ApposeService.java  BugReportService.java  ClassifierBackend.java  ClassifierClient.java  DLPixelClassifier.java  ModelManager.java  NormalizationStatsComputer.java  OverlayService.java  SessionLogBuffer.java  TileBlendCache.java  TrainingIssuesOverlayController.java
src/main/java/qupath/ext/dlclassifier/ui/: AdvancedAugmentationDialog.java  BugReportDialog.java  InferenceDialog.java  LayerFreezePanel.java  MAEPretrainingDialog.java  OverlaySettingsDialog.java  ProgressMonitorController.java  PythonConsoleWindow.java  SSLPretrainingDialog.java  TrainingAreaIssuesDialog.java  TrainingDialog.java
src/main/java/qupath/ext/dlclassifier/utilities/: AnnotationExtractor.java  HeatmapColormap.java  ImageClassCoverageSplitter.java  PatchSampler.java  TissueDetectionUtility.java
src/main/resources/qupath/ext/dlclassifier/: pixi.toml
src/main/resources/qupath/ext/dlclassifier/scripts/: evaluate_tiles.py  finalize_training.py  get_model_layers.py  inference_batch.py  inference_pixel.py  inference_pixel_batch.py  init_services.py  pretrain_ssl.py  train.py
src/main/resources/qupath/ext/dlclassifier/ui/: strings.properties
src/test/java/qupath/ext/dlclassifier/model/: TrainingConfigCoverageTest.java
src/test/java/qupath/ext/dlclassifier/service/: SessionLogBufferTest.java
src/test/java/qupath/ext/dlclassifier/utilities/: ImageClassCoverageSplitterTest.java
tools/: check-doc-images.sh  diagnose_eval_vs_inference.py
(+11 files in other folders)
