[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlclassifier-server"
version = "0.3.5"
description = "Deep learning pixel classification server for QuPath"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
authors = [
    {name = "UW-LOCI", email = "loci@wisc.edu"}
]
keywords = ["deep-learning", "segmentation", "qupath", "microscopy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "segmentation-models-pytorch>=0.3.3",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",  # Base package, works cross-platform
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "tifffile>=2023.7.0",
    "imagecodecs>=2023.7.0",
    "albumentations>=1.3.0",
    "timm>=1.0.0",
    "ttach>=0.0.3",
]

[project.optional-dependencies]
cuda = [
    "onnxruntime-gpu>=1.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "scipy>=1.10.0",  # For test data generation
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
